--- a/Neighborly/Views/Shared/_Layout.cshtml
+++ b/Neighborly/Views/Shared/_Layout.cshtml
@@ -105,9 +105,10 @@
                 <div>
                     <h3 class="text-lg font-semibold mb-3">O nas</h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Jak to działa</a></li>
+                        <li><a href="/Home/Privacy" class="text-gray-400 hover:text-white transition-colors">Polityka prywatności</a></li>
+                        <li><a href="/regulamin" class="text-gray-400 hover:text-white transition-colors">Regulamin</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Kontakt</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Polityka prywatności</a></li>
+
                     </ul>
                 </div>
                 
