added google api

--- a/Neighborly/Views/Listings/Details.cshtml
+++ b/Neighborly/Views/Listings/Details.cshtml
@@ -65,9 +65,10 @@
                                 <h2 class="font-semibold text-lg">Mapa lokalizacji</h2>
                             </div>
                             <div class="p-6 pt-0">
-                                <div class="bg-gray-200 h-64 rounded-md flex items-center justify-center">
-                                    <p class="text-gray-600">Mapa zostanie zintegrowana z Google Maps API</p>
-                                </div>
+                                <iframe width="100%" height="256" class="rounded-md" loading="lazy" allowfullscreen
+                                        referrerpolicy="no-referrer-when-downgrade"
+                                        src="https://www.google.com/maps/embed/v1/view?key=@ViewBag.GoogleApiKey&center=@Model.Listing.Latitude,@Model.Listing.Longitude&zoom=14">
+                                </iframe>
                             </div>
                         </div>
                     </div>
